<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">GWind</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string-array name="pref_serverURL_values">
        <item>http://192.168.1.3:8080/webwind/</item>
        <item>http://giacomohome.ddns.net:8080/webwind/</item>
        <item>http://giacomohome.ddns.net:9090/webwind</item>
    </string-array>
    <string name="pref_serverURL_default">http://giacomohome.ddns.net:8080/webwind/</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_summ">pref_sync_summ</string>


    <string name="pref_serverURL">pref_serverURL</string>
    <string-array name="pref_serverURL_entries">
        <item>development</item>
        <item>production</item>
        <item>test</item>
    </string-array>

    <string name="options_refresh">Refresh</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>


    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_clear">Clear</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="opzioni">
        <item>Stazione meteo</item>
        <item>Sveglie</item>
        <item>Notifiche</item>
        <item>Log</item>
        <item>Impostazioni</item>
    </string-array>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>

    <string name="title_activity_play_alarm">PlayAlarmActivity</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_sendlog">SendLogActivity</string>
    <string name="title_activity_fullchart">Fullchart</string>


    <string name="message_subject">Android device log</string>
    <string name="acquiring_log_progress_dialog_message">Acquiring log from the system &#8230;</string>
    <string name="chooser_title">"Select an application to send the log"</string>
    <string name="failed_to_get_log_message">"Failed to get the log from the system."</string>
    <string name="main_dialog_text">"This application will attempt to collect the device log.
    The collected log will be sent using an application of your choice.
    You also will have an opportunity to see and modify the data being sent."
    </string>
    <string name="device_info_fmt">
Log Collector version: <xliff:g id="application_version">%s</xliff:g>\n
Device model: <xliff:g id="device_model">%s</xliff:g>\n
Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
Build number: <xliff:g id="build_number">%s</xliff:g>\n
    </string>

    <string name="options_spotorder">Gestione preferiti</string>
    <string name="options_searchspot">Cerca</string>
    <string name="options_searchmeteoforecast">Previsioni meteo</string>


    <string name="notification_highwind">notifiche vento forte</string>
    <string name="notification_highwind_sum">Visualizza notifiche vento forte</string>
    <string name="dialog_readingmeteo">notification_windincrease</string>
    <string name="notification_windincrease">notification_windincrease</string>
    <string name="notification_windincrease_summ">Abilita notifiche per aumento velocità del vento</string>

    <string name="notification_changedirection">notification_changedirection</string>
    <string name="notification_changedirection_summ">Abilita notifiche per cambio direzione del</string>


    <array name="dummy_items">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
    </array>

</resources>
